--- a/app/login.module.css
+++ b/app/login.module.css
@@ -1,17 +1,16 @@
 .Background {
     background-position: center;
     max-width: 100vw;
-    position: relative;
+    position: absolute;
     display: flex;
     height: 100vh;
 }
 .form {
-    width: 50%;
     z-index: 2;
     position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -60%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,7 +20,7 @@
 .form h1 {
     color: #000;
     font-family: 'Inter';
-    font-size: 50px;
+    font-size: 5vw;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
@@ -35,7 +34,7 @@
         position: relative;
         overflow: hidden;
     }
-    .form h1 {
-        font-size: 30px;
+    .form h1{
+        font-size: 10vw;
     }
 }
