--- a/app/login.module.css
+++ b/app/login.module.css
@@ -1,9 +1,9 @@
 .Background {
     background-position: center;
-    max-width: 100vw;
-    position: absolute;
-    display: flex;
-    height: 100vh;
+    background-size:cover;
+    background-image: url("../public/Images/Background.png");
+    width:100vw;
+    height:100vh;
 }
 .form {
     z-index: 2;
